Resolved defect #699191 where social icons were out of alignment on IE

--- a/webroot/skin/frontend/blueacorn/mis/css/styles.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles.css
@@ -3671,7 +3671,6 @@ a.skip-link {
       .footer .links a:hover {
         color: #00247B; }
   .footer .block-subscribe {
-    float: right;
     width: 290px;
     margin-bottom: 30px;
     margin-top: 7px;
